--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
 
   adminer:
     image: adminer
+    namespace: koudom300003751175-intel
     restart: always
     ports:
       - 8080:8080
